# Ceres-Agente

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  api.py  ceres.db  contexto_proyecto_ceres.md  docker-compose.yml  main.py  pyproject.toml  test_email.py
%SystemDrive%/ProgramData/Microsoft/Windows/Caches/: cversions.2.db  {3B581BA6-7EFA-444C-82AC-875DC6FAC5BA}.2.ver0x0000000000000001.db  {6AF0698E-D558-4F6E-9B3C-3716689AF493}.2.ver0x0000000000000001.db  {DDF571F2-BE98-426D-8288-1A9A39C3FDA2}.2.ver0x0000000000000001.db
cloudflared/: config.yml
frontend/: index.html
src/ceres_agente/: __init__.py
src/ceres_agente/agent/: graph.py
src/ceres_agente/config/: settings.py
src/ceres_agente/db/: __init__.py  database.py  models.py
src/ceres_agente/prompts/: __init__.py  system_prompt.py
src/ceres_agente/services/: __init__.py  cotizador.py  notificaciones.py  scoring.py  tiie.py  whatsapp.py
src/ceres_agente/tools/: __init__.py  example_tools.py  fira_tool.py
