[project]
name = "ceres-agente"
version = "0.1.0"
description = "Agente inteligente construido con LangChain y LangGraph"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
]
