[project]
name = "ceres-agente"
version = "0.1.0"
description = "Agente inteligente construido con LangChain y LangGraph"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-aws>=0.2.0",
    "langgraph>=1.2.1",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "boto3>=1.35.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "sqlmodel>=0.0.38",
    "scikit-learn>=1.8.0",
    "numpy>=2.4.6",
    "httpx>=0.28.1",
    "twilio>=9.10.9",
    "python-multipart>=0.0.29",
    "resend>=2.10.0",
]
